if include_ada
ADA_LANGUAGE = ada
else
ADA_LANGUAGE =
endif

if include_bash
BASH_LANGUAGE = bash
else
BASH_LANGUAGE =
endif

if include_cpp
CPP_LANGUAGE = cpp
else
CPP_LANGUAGE =
endif

if include_fortran
FORTRAN_LANGUAGE = fortran
else
FORTRAN_LANGUAGE =
endif

if include_haskell
HASKELL_LANGUAGE = haskell
else
HASKELL_LANGUAGE =
endif

if include_java
JAVA_LANGUAGE = java
else
JAVA_LANGUAGE =
endif

if include_pascal
PASCAL_LANGUAGE = pascal
else
PASCAL_LANGUAGE =
endif

if include_perl
PERL_LANGUAGE = perl
else
PERL_LANGUAGE =
endif

if include_php
PHP_LANGUAGE = php
else
PHP_LANGUAGE =
endif

if include_python
PYTHON_LANGUAGE = python
else
PYTHON_LANGUAGE =
endif

if include_ruby
RUBY_LANGUAGE = ruby
else
RUBY_LANGUAGE =
endif

if include_sql
SQL_LANGUAGE = sql
else
SQL_LANGUAGE =
endif

SUBDIRS = $(ADA_LANGUAGE) $(BASH_LANGUAGE) $(CPP_LANGUAGE) $(FORTRAN_LANGUAGE) $(HASKELL_LANGUAGE) $(JAVA_LANGUAGE) $(PASCAL_LANGUAGE) $(PERL_LANGUAGE) $(PHP_LANGUAGE) $(PYTHON_LANGUAGE) $(RUBY_LANGUAGE) $(SQL_LANGUAGE)
